added link to image in application

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,32 @@
 <html>
     <head>
         <title>Eat da Burger!</title>
-        
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="/assets/css/burger_style.css">
+        <link rek="icon" href="/assets/burgerimg.jpg">
     </head>
+    <body>
+        <div class="container">
+
+            <br>
+
+            <center>
+                <div class="row">
+                    <img src="/assets/burgerimg.jpg">
+                </div>
+            </center>
+
+            <center>
+                <h1 class="red_font">Eat da Burger!</h1>
+            </center>
+
+            <br>
+
+            {{{body}}}
+
+            <br><br>
+
+
+        </div>
+    </body>
 </html>
