--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,26 @@
 
             <br><br>
 
+            <form action="burger/create" method="POST">
+                <div class="row">
+                    <div class="col-md-3"></div>
+                </div>
+
+                <div class="form-group col-md-6">
+                        <center><label for="new_burger" class="red_font">Pick out a burger to devour!</label></center>
+                        <textarea class="form-control" columns="8" rows="4" id="new_burger" name="burger_name"></textarea>
+                    </div>
+
+                    <center>
+                        <button id="submit-button" type="submit" class="btn btn-danger">Pick a burger!</button>
+                    </center>
+            </form>
+
+            <br>
+
 
         </div>
+
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     </body>
 </html>
