--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,37 +1,30 @@
-<div class="row">
-    <center>
-        <div class="col-md-6">
-            <h4 class="red_font">Ready to eat!</h4>
-            <div id="ready_to_eat">
-                {{#each burgers}}
-                    {{#unless devoured}}
-                    <form action="burger/eat/{{id}}" method="POST">
-                        <div class="input-group">
-                            <li class="form-control">{{id}}. {{burger_name}}</li>
-                              <span class="input-group-btn">
-                                  <button class="btn btn-success devour-button" type="submit">Devour!</button>
-                              </span>
-                        </div>
-                    </form>
-                    {{/unless}}
-                {{/each}}
-            </div>
-        </div>
+<h1>Eat da Burger!</h1>
 
-        <div class="col-md-6">
-            <h4 class="red_font">Already eaten!</h4>
-            <div id="already_eaten">
-                {{#each burgers}}
-                  {{#if this.devoured}}
-                    <div class="input-group">
-                        <li class="form-control">{{this.id}}. {{this.burger_name}}</li>
-                        <span class="input-group-btn">
-                            <button class="btn btn-info whine-button" type="button"></button>
-                        </span>
-                    </div>
-                  {{/if}}
-                {{/each}}
-            </div>
-        </div>
-    </center>
-</div>
+<h2> Burgers Left to Eat</h2>
+
+<ul>
+    {{#each burgers}}
+    {{#unless devoured}}
+    {{> burgers/burger-block devoured=false}}
+    {{/unless}}
+    {{/each}}
+</ul>
+
+<h2> Burgers eaten so far:</h2>
+
+<ul>
+    {{#each burgers}}
+    {{#if devoured}}
+    {{> burgers/burger-block devoured=true}}
+    {{/if}}
+    {{/each}}
+</ul>
+
+<h2> Add a Burger! </h2>
+<form class="create-form">
+    <div class="form-group">
+        <label for="burger">Burger Name: </label>
+        <input type="text" id="burger" name="name">
+    </div>
+    <button type="submit">Add Burger</button>
+</form>
