--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html>
     <head>
         <title>Eat da Burger!</title>
@@ -49,4 +49,20 @@
 
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     </body>
+</html> --}}
+
+<!DOCTYPE html>
+<html lang="en">
+
+
+<head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    {{{body}}}
+</body>
+
 </html>
