--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,16 +53,19 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-
-<head> 
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    {{{body}}}
-</body>
+        <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+        <title>Artist Savor</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+            integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+        <script src="/assets/js/artist-savor.js"></script>
+    </head>
+    <body>
+        {{{ body }}}
+    </body>
 
 </html>
