--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="jumbotron" id="jumbo">
         <h1>Eat da Burger!</h1>
-        <img src="/public/assets/burgerimg.jpg" alt="Burger" width="140px" class="center">
+        <img src="/assets/burgerimg.jpg" alt="Burger" width="140px" class="center">
         <h2>Make your own burger to devour!</h2>
     </div>
 
@@ -9,10 +9,8 @@
         <form class="create-form">
             <div class="form-group">
                 <label for="newburger">Create a burger</label>
-                <input type="text" id="newburger" name="burger">
-                <button type="submit" class="btn btn-success" id="addburger">
-                    <span class="fa fa-credit-card"></span>
-                </button>
+                <input type="text" id="newBurger" name="burger">
+                <button type="submit" class="btn btn-success" id="addBurger">Submit</button>
             </div>
         </form>
     </panel>
@@ -28,7 +26,7 @@
                     <li>
                         <span><strong> {{this.id}} - {{this.burger_name}} </strong></span>
                         <button type="button" class="devour-burger btn btn-warning" id="eatbtn" data-id="{{this.id}}"
-                            data-newDevoured="{{devour}}"><span class="fa fa-cutlery"></span>Eat da burger!</button>
+                            data-newDevoured="{{devour}}"><span class="fa fa-cutlery"></span>Order!</button>
                     </li>
                     {{/unless}}
                     {{/each}}
@@ -47,7 +45,7 @@
                         <span><strong> {{this.id}} - {{this.burger_name}} </strong></span>
                         <button type="button" class="delete-burger btn btn-danger" id="deletebtn"
                             data-id="{{this.id}}" data-newDevoured="{{devour}}"><span class="fa fa-hand-spock-o"></span>
-                            Delete burgers</button>
+                            Eat da burger!</button>
                     </li>
                     {{/if}}
                     {{/each}}
